--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "aframe": "^1.7.1",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-force-graph": "^1.48.1",
     "react-icons": "^5.5.0",
+    "react-wordcloud": "^1.0.5",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
