--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "aframe": "^1.7.1",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
     "lucide-react": "^0.545.0",
@@ -21,7 +24,8 @@
     "react-dom": "19.1.0",
     "react-force-graph": "^1.48.1",
     "react-icons": "^5.5.0",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
