--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "aframe": "^1.7.1",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
@@ -22,6 +24,7 @@
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "d3-cloud": "^1.2.7",
+    "geist": "^1.5.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
