--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "geist": "^1.5.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
