--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-force-graph": "^1.48.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.2.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
